--- a/index.css
+++ b/index.css
@@ -1,8 +1,26 @@
 body{
-    background-color: purple;
+    background-color: black;
+    background-image: url(img/hatter.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    height: 100vh;
+    margin: 0;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 #img1 {
     width: 50px;
     height: 50px;
     border-radius: 50%;
+}
+p{
+    font-size: large;
+    font-weight: bolder;
+    color: blue;
+}
+
+#hamarosan {
+    font-size: xx-large;
+    color: red;
+    font-style: italic;
 }
